# cpp-sample

./: Dockerfile
.devcontainer/: devcontainer.json
cpp/: CMakeLists.txt
cpp/cmake/: AddAWSSDK.cmake  AddCatch2.cmake
cpp/script/: debug.sh  release.sh  run.sh
cpp/src/: CMakeLists.txt  calc.cpp  calc.hpp  main.cpp
cpp/test/: CMakeLists.txt  test_calc.cpp
script/: build.sh  exec.sh
